feat: Complete app store setup and enhance search functionality
- Add app store submission configuration (app.json, eas.json, env.example)
- Implement comprehensive search functionality across all content types
- Add legal pages (Privacy Policy, Terms of Service) with navigation
- Optimize Profile screen menu items and statistics
- Fix Header button functionality across all screens
- Add SearchScreen with multi-type content search (businesses, trending, specials)
- Update navigation structure and improve user experience
- Remove unused bookings functionality
- Consolidate membership and subscription features

--- a/app.json
+++ b/app.json
@@ -1,27 +1,38 @@
 {
   "expo": {
-    "name": "lifex-mobile",
+    "name": "LifeX",
     "slug": "lifex-mobile",
     "version": "1.0.0",
+    "description": "Discover amazing local services in New Zealand with AI-powered recommendations",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "dark",
     "newArchEnabled": true,
+    "privacy": "public",
+    "platforms": ["ios", "android"],
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#000000"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.lifex.mobile",
+      "buildNumber": "1"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#000000"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.lifex.mobile",
+      "versionCode": 1,
+      "permissions": [
+        "android.permission.INTERNET",
+        "android.permission.ACCESS_NETWORK_STATE"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
