--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "description": "Discover amazing local services in New Zealand with AI-powered recommendations",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icon-1024.png",
     "userInterfaceStyle": "dark",
     "newArchEnabled": true,
     "privacy": "public",
@@ -18,12 +18,14 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.lifex.mobile",
-      "buildNumber": "1"
+      "buildNumber": "1",
+      "icon": "./assets/icon-180.png"
     },
     "android": {
+      "icon": "./assets/icon-192.png",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#000000"
+        "foregroundImage": "./assets/icon-512.png",
+        "backgroundColor": "#8B5CF6"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
