Fix chat AI integration: Use stable GPT-4o-mini model with RAG implementation

--- a/env.example
+++ b/env.example
@@ -1,6 +1,16 @@
 # Supabase Configuration
 EXPO_PUBLIC_SUPABASE_URL=your_supabase_url_here
 EXPO_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
+
+# OpenAI Configuration (for Supabase Edge Function)
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_MODEL=gpt-4o-mini
 
 # API Configuration
 EXPO_PUBLIC_API_URL=https://api.lifex.co.nz
+
+# App Configuration
+EXPO_PUBLIC_APP_NAME=LifeX
+EXPO_PUBLIC_APP_VERSION=1.0.0
+EXPO_PUBLIC_ENV=development
