docs: 整理项目文档和路线图
- 创建 PROJECT_ROADMAP.md 详细规划未来 6 个月任务
- 创建 ADVANCED_RECOMMENDATION_SYSTEM.md 高级推荐系统架构
- 删除 20+ 临时文档和已完成指南
- 更新 README.md 添加完整技术栈和文档索引
- 保留核心策略文档（数据采集、更新、检索优化等）

--- a/app.json
+++ b/app.json
@@ -9,7 +9,10 @@
     "userInterfaceStyle": "dark",
     "newArchEnabled": true,
     "privacy": "public",
-    "platforms": ["ios", "android"],
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -18,8 +21,11 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.lifex.mobile",
-      "buildNumber": "1",
-      "icon": "./assets/icon-180.png"
+      "buildNumber": "2",
+      "icon": "./assets/icon-180.png",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "icon": "./assets/icon-192.png",
@@ -38,6 +44,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "b185cc69-d6fa-4768-b72b-9a252b83bc9a"
+      }
     }
   }
 }
