--- a/.github/workflows/scrape-events.yml
+++ b/.github/workflows/scrape-events.yml
@@ -2,6 +2,15 @@ name: Scrape Events (Rendered)
 
 on:
   workflow_dispatch:
+    inputs:
+      dry_run:
+        description: 'Dry run (no DB writes)'
+        type: boolean
+        default: true
+      sample_limit:
+        description: 'Detail sample size in dry-run'
+        type: number
+        default: 10
   schedule:
     - cron: '25 3 * * *'
 
@@ -12,6 +21,7 @@ jobs:
       SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
       SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
       DRY_RUN: 'true'
+      SAMPLE_LIMIT: '10'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -24,6 +34,12 @@ jobs:
       - name: Disable DRY_RUN on schedule
         if: github.event_name == 'schedule'
         run: echo "DRY_RUN=false" >> $GITHUB_ENV
+
+      - name: Apply manual inputs
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          echo "DRY_RUN=${{ inputs.dry_run }}" >> $GITHUB_ENV
+          echo "SAMPLE_LIMIT=${{ inputs.sample_limit }}" >> $GITHUB_ENV
 
       - name: Install Playwright (local)
         run: |
@@ -41,6 +57,7 @@ jobs:
           const SUPABASE_URL = process.env.SUPABASE_URL;
           const SUPABASE_SERVICE_ROLE_KEY = process.env.SUPABASE_SERVICE_ROLE_KEY;
           const DRY_RUN = String(process.env.DRY_RUN || 'true').toLowerCase() === 'true';
+          const SAMPLE_LIMIT = parseInt(process.env.SAMPLE_LIMIT || '10', 10);
 
           if (!SUPABASE_URL || !SUPABASE_SERVICE_ROLE_KEY) {
             throw new Error('Missing SUPABASE_URL or SUPABASE_SERVICE_ROLE_KEY');
@@ -199,7 +216,7 @@ jobs:
 
             // If dry run, skip detail extraction DB writes but still probe a few for visibility
             const detailItems = [];
-            const sampleLimit = DRY_RUN ? Math.min(all.length, 10) : all.length;
+            const sampleLimit = DRY_RUN ? Math.min(all.length, Number.isFinite(SAMPLE_LIMIT) ? SAMPLE_LIMIT : 10) : all.length;
             for (let i = 0; i < sampleLimit; i++) {
               const item = all[i];
               const page = await context.newPage();
