--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -34,6 +34,9 @@ verify_jwt = false
 [functions."events-scrape"]
 verify_jwt = false
 
+[functions."business-website-extract"]
+verify_jwt = false
+
 
 
 
