--- a/.github/workflows/scrape-events.yml
+++ b/.github/workflows/scrape-events.yml
@@ -107,6 +107,35 @@ jobs:
             return results;
           }
 
+          function htmlDecode(str) {
+            if (!str) return str;
+            return String(str)
+              .replace(/&amp;/gi, '&')
+              .replace(/&#x2B;/gi, '+')
+              .replace(/&plus;/gi, '+')
+              .replace(/&lt;/gi, '<')
+              .replace(/&gt;/gi, '>')
+              .replace(/&quot;/gi, '"')
+              .replace(/&#39;/gi, "'");
+          }
+
+          function normalizeDateTime(input) {
+            if (!input) return null;
+            let s = htmlDecode(String(input).trim());
+            // Replace space between date and time with 'T' if present
+            if (/^\d{4}-\d{2}-\d{2} \d{2}:\d{2}/.test(s)) {
+              s = s.replace(' ', 'T');
+            }
+            // Trim fractional seconds to max 6 digits to satisfy Postgres
+            s = s.replace(/\.(\d{6})\d+([Z\+\-])/, '.$1$2');
+            const d = new Date(s);
+            if (!Number.isNaN(d.valueOf())) return d.toISOString();
+            // Retry: remove any remaining HTML entities and try again
+            s = s.replace(/&#[xX]([0-9A-Fa-f]+);/g, (_, hex) => String.fromCharCode(parseInt(hex, 16)));
+            const d2 = new Date(s);
+            return Number.isNaN(d2.valueOf()) ? null : d2.toISOString();
+          }
+
 
           if (!SUPABASE_URL || !SUPABASE_SERVICE_ROLE_KEY) {
             throw new Error('Missing SUPABASE_URL or SUPABASE_SERVICE_ROLE_KEY');
@@ -274,12 +303,14 @@ jobs:
                   try {
                     const detail = await extractDetails(page, item.url);
                     if (!detail) return null;
+                    const normStart = normalizeDateTime(detail.starts_at);
+                    const normEnd = normalizeDateTime(detail.ends_at);
                     return {
                       ...item,
                       title: detail.title || item.title,
                       description: detail.description,
-                      starts_at: detail.starts_at,
-                      ends_at: detail.ends_at,
+                      starts_at: normStart,
+                      ends_at: normEnd,
                       venue_name: detail.venue_name,
                       city: detail.city,
                     };
